appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- assertVisible: "Components"
- openLink: "rntester://example/ModalExample"
- assertVisible:
    text: "Show Modal"
- tapOn:
    text: "Show Modal"
- assertVisible:
    text: "Close"
- tapOn:
    text: "Close"
- assertVisible:
    text: "Show Modal"
